# module-6-mnajmytsss

./: .dockerignore  .gitignore  Dockerfile  app.py  pyproject.toml
routes/: __init__.py  auth.py  users.py
views/: __init__.py  auth.py  users.py
