[tool.poetry]
name = "flask-revou"
version = "0.1.0"
description = ""
authors = ["mnajmytsss <najmytsaqiby22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
